--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
 	"type": "module",
 	"scripts": {
 		"build": "next build",
-		"check": "biome check .",
-		"check:unsafe": "biome check --write --unsafe .",
-		"check:write": "biome check --write .",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "drizzle-kit migrate",
 		"db:push": "drizzle-kit push",
 		"db:studio": "drizzle-kit studio",
 		"dev": "next dev --turbo",
+		"lint": "biome check --write .",
 		"preview": "next build && next start",
 		"start": "next start",
 		"typecheck": "tsc --noEmit"
@@ -28,6 +26,7 @@
 		"next": "^15.2.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"scrapfly-sdk": "^0.6.9",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.1",
 		"zod": "^3.24.2"
