--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"db:studio": "drizzle-kit studio",
 		"dev": "next dev --turbo",
 		"lint": "biome check --write .",
-		"preview": "next build && next start",
+		"preview": "pnpm lint &&next build && next start",
 		"start": "next start",
 		"typecheck": "tsc --noEmit"
 	},
